--- a/css/navbar.css
+++ b/css/navbar.css
@@ -67,12 +67,12 @@ nav {
 	height: 5rem;
 }
 
-.logo-cc {
+.logo-cc-cc {
 	height: 3rem;
 	width: 3rem;
 }
 
-.logo-cc img {
+.logo-cc-cc img {
 	height: 8rem;
 	width: 8rem;
 }
