--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,8 +1,10 @@
 /* importing fonts */
 @import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap");
+@import url("fonts\Overcame\*");
+
 @font-face {
 	font-family: Overcame;
-	src: url(fonts/Overcame/*);
+	src: url("fonts/Overcame/*");
 	font-family: Binary;
 	src: url(fonts/Binary/*);
 }
