--- a/css/progressBar.css
+++ b/css/progressBar.css
@@ -5,16 +5,18 @@
 	position: fixed;
 	top: 0;
 	right: 0;
-	width: 10px;
+	width: 0.625rem;
 	height: 100%;
+	border-radius: 0.625rem;
 	background: rgba(14, 14, 14, 0.5);
 }
 #progressBar {
 	position: fixed;
 	top: 0;
 	right: 0;
-	width: 10px;
+	width: 0.625rem;
 	height: 100%;
+	border-radius: 0.625rem;
 	background: linear-gradient(to top, #008aff, #00ffe7);
 	animation: animate 5s linear infinite;
 }
@@ -35,7 +37,7 @@
 	width: 100%;
 	height: 100%;
 	background: linear-gradient(to top, #008aff, #00ffe7);
-	filter: blur(10px);
+	filter: blur(0.625rem);
 }
 #progressBar:after {
 	content: "";
@@ -45,5 +47,5 @@
 	width: 100%;
 	height: 100%;
 	background: linear-gradient(to top, #008aff, #00ffe7);
-	filter: blur(30px);
+	filter: blur(1.875rem);
 }
