--- a/css/slider.css
+++ b/css/slider.css
@@ -8,8 +8,8 @@ img {
 
 .sliderParent {
 	padding-top: 8.5vh;
-	height: 90vh;
-	background-color: #1b1b1b;
+	height: 80vh;
+	/* background-color: #1b1b1b; */
 }
 .tagLine {
 	color: white;
