--- a/css/slider.css
+++ b/css/slider.css
@@ -1,3 +1,15 @@
+.welcomeTxt {
+	padding-top: 0.5rem;
+	font-family: "Audiowide";
+	font-size: 52px;
+	text-align: center;
+}
+
+#codechef {
+	font-size: 48px;
+	opacity: 50%;
+}
+
 .mySlides {
 	display: none;
 }
@@ -7,7 +19,7 @@ img {
 }
 
 .sliderParent {
-	padding-top: 8.5vh;
+	padding-top: 5rem;
 	height: 80vh;
 	/* background-color: #1b1b1b; */
 }
@@ -26,7 +38,7 @@ img {
 /* Caption text */
 .text {
 	color: #f2f2f2;
-	font-size: 15px;
+	font-size: 1px;
 	padding: 8px 12px;
 	position: absolute;
 	bottom: 8px;
