Fixed- Nav Bar Added Stuff to Footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-	height: 50vh;
+	height: 60vh;
 }
 
 .fa-twitter {
@@ -49,17 +49,17 @@
 	text-align: left;
 	font-size: 1.1rem;
 }
-
+.fa-map-marker {
+	padding-bottom: 1rem;
+}
 #copyrightDiv {
 	margin-top: none;
 	padding-right: 2rem;
 	padding-bottom: 5px;
 }
-
 #emailID {
 	padding-top: 20px;
 }
-
 #addressDiv {
 	padding-top: 2.5rem;
 }
@@ -88,16 +88,20 @@
 	color: white;
 	font-style: normal;
 }
-.aboutFtr {
-	padding-top: 2rem;
-	padding-bottom: 2rem;
-}
-#aboutHeadingFtr {
+.committeeFtr {
+	padding-top: 2.5rem;
 	padding-bottom: 1rem;
 }
-#aboutContentFtr {
+#committeeHeadingFtr {
+	padding-bottom: 1rem;
+}
+#committeeContentFtr {
 	text-align: center;
-	width: 20rem;
+	width: 22rem;
 	font-size: 1rem;
 	opacity: 50%;
+	font-size: 15px;
+}
+#committeeContentFtr p {
+	padding-bottom: 1rem;
 }
