--- a/css/slider.css
+++ b/css/slider.css
@@ -1,5 +1,6 @@
 .welcomeTxt {
-	padding-top: 0.5rem;
+	margin-top: .8rem;
+	padding-bottom: 0.6rem;
 	font-family: "Audiowide";
 	font-size: 52px;
 	text-align: center;
