--- a/css/style.css
+++ b/css/style.css
@@ -363,6 +363,7 @@ label {
 	margin: 1rem;
 }
 
+
 input[type="text"] {
 	border: 2px solid green;
 	border-radius: 0.5rem;
@@ -389,6 +390,22 @@ textarea {
 	resize: none;
 	font-size: 1rem;
 	font-family: Georgia, "Times New Roman", Times, serif;
+}
+
+.email-box{
+	border: 2px solid green;
+	border-radius: 0.5rem;
+	height: 2rem;
+	padding: 1.2rem;
+	width: 25rem;
+	font-size: 1rem;
+	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+		"Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+}
+
+.email-box:placeholder-shown{
+	font-weight: 800;
+	font-size: 1rem;
 }
 
 .submit button {
